Added Windows testing and configured Makefile, .venv tools, and CMakeLists.txt for more seamless development on my end (allowing for JetBrains code insight with PyCharm and CLion and whatnot).

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-# Homework folder :)
+# All my un-needed local CMake configuration stuff that would make building harder.
+**/CMakeLists.local.txt
+**/cmake-build-*
+
+# Homework folder/folders :)
 homework/
 homework/*
 homework/**/*
