I decided against having a units package, and I'll just use pint. I'm also deciding to precompile tables into better formats, so I've written my own file format and utility tool to parse them.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ readme = "README.md"
 requires-python = ">=3.9"
 authors = [{name = "Logan Dapp", email = "logan@logand.app"}]
 license = {file = "LICENSE"}
+dependencies = [
+    'pint'
+]
 
 [tool.scikit-build]
 cmake.version = ">=3.27"
