Started implementing baked-in data, but I'm not happy with the write_to_source_file code; I'm going to do a rewrite in a bit.

--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -29,6 +29,8 @@ add_library(logngine_core STATIC
         core/hello.cpp
         include/logngine/core/RSTTree.h
         core/RSTTree.cpp
+        include/logngine/data/thermo/State.cpp
+        include/logngine/data/thermo/State.h
 )
 target_include_directories(logngine_core PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
